# codegraph

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  HANDOFF.md  README.md  codegraph-mcp.sh  design_spec.md  north_star.md  postmortem.md  setup
.claude/: settings.json
.claude/hooks/: codegraph_guard.py
.codegraph/: config.yaml
.codegraph/ops/: device-3f241a55d883bc5b.jsonl  device-73b5094f3537c959.jsonl
.codex/: hooks.json
baseline_control/control/: AGENTS.baseline.md  AGENTS.treatment.md  README.md  apply_drift.sh  drift_manifest.json  ground_truth.md  prepare_run.sh  run_hidden.sh  session_prompts.txt  verify_chain.sh
baseline_control/control/drifts/: drift-1.patch  drift-2.patch
baseline_control/control/gold/: session-1.patch  session-2.patch  session-3.patch
baseline_control/control/hidden/: CMakeLists.txt  background_deferral_hidden_test.cpp  batch_limit_hidden_test.cpp  invariant_matrix_hidden_test.cpp  regression_hidden_test.cpp  unlimited_batch_hidden_test.cpp
baseline_control/runs/pilot-001/: baseline-hidden-tests.txt  session-1-canonical-handoff.md  session-2-canonical-handoff.md  treatment-hidden-tests.txt
baseline_control/runs/pilot-001-invalid/: session-2-handoff.md
baseline_control/runs/pilot-001/treatment-contaminated-codegraph-before-session1/: config.yaml  device_id  graph.sqlite
baseline_control/runs/pilot-001/treatment-contaminated-codegraph-before-session1/hooks/: 019f00cd-0a53-7e03-ae8d-4f844c54ebdc.json
baseline_control/runs/pilot-001/treatment-contaminated-codegraph-before-session1/ops/: device-7dd50a26d50080d5.jsonl
benchmarks/: mcp_benchmark.py
docs/: agent_session_lifecycle.md  verified_resume_experiment.md
hooks/: codegraph_session.py
src/: bootstrap.cpp  bootstrap.h  core.cpp  core.h  cpp_frontend.cpp  cpp_frontend.h  cpp_indexer.cpp  cpp_indexer.h  extraction.h  file_util.cpp  file_util.h  frontend.cpp  frontend.h  graph_store.cpp  graph_store.h  hash_util.cpp  hash_util.h  indexer.cpp  indexer.h  main.cpp  materializer.cpp  materializer.h  mcp_server.cpp  mcp_server.h  memory_kinds.cpp  memory_kinds.h  memory_reads.cpp  memory_reads.h  read_tools.cpp  read_tools.h  resolver.cpp  resolver.h  scanner.cpp  scanner.h  source_projection.cpp  source_projection.h  sqlite_util.cpp  sqlite_util.h  storage.cpp  storage.h  (+2 more)
testing/: Makefile  helloword  helloworld.cpp  sample.cpp  sample.py  session_hook_smoke.py
